fix home hero image z-index

--- a/_sass/home/_rows.scss
+++ b/_sass/home/_rows.scss
@@ -49,7 +49,7 @@
     }
   }
 
-  > .wrap {z-index: 999;}
+  > .wrap {z-index: 5;}
 }
 
 .video-container {
